# Lings

./: LICENSE  README.md  diceditor.py  gui.py  justfile  plugin_manager.py  pyproject.toml  requirements.txt  texteditor.py
.devcontainer/: Dockerfile  devcontainer.json
data/: en_ar_grades.json  en_cn_passport.json  translations_metadata.json
lings/: diceditor.py  dicmanager.py  gui.py  plugin_manager.py  texteditor.py  translator.py
lings/plugins/: deepl_translator.py  sample_plugin.py
plugins/: deepl_translator.py  plugin_config.json
translations/: en_cn_grades.json  zh_ar_grades.json
